--- a/app/src/main/res/drawable/bg_filled_outlined.xml
+++ b/app/src/main/res/drawable/bg_filled_outlined.xml
@@ -2,10 +2,10 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <corners android:radius="4dp" />
+    <corners android:radius="@dimen/_4sdp" />
 
     <stroke
-        android:width="1dp"
+        android:width="@dimen/_1sdp"
         android:color="@color/bg_stroke_color" />
 
     <solid android:color="@color/transparent" />
