--- a/app/src/main/res/layout/activity_account.xml
+++ b/app/src/main/res/layout/activity_account.xml
@@ -3,9 +3,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/main"
-    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <FrameLayout
         android:id="@+id/frameToolbar"
@@ -17,12 +17,26 @@
             layout="@layout/toolbar_layout" />
     </FrameLayout>
 
-    <LinearLayout
-        android:layout_below="@+id/frameToolbar"
-        android:id="@+id/lnrItem"
+    <TextView
+        android:id="@+id/txtUserDetails"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/_24sdp"
+        android:layout_below="@+id/frameToolbar"
+        android:layout_gravity="center"
+        android:layout_marginHorizontal="@dimen/_24sdp"
+        android:layout_marginTop="@dimen/_24sdp"
+        android:fontFamily="@font/inter_bold"
+        android:text="User Details"
+        android:textAppearance="@style/inter_700_12_10"
+        android:textColor="@color/black" />
+
+    <LinearLayout
+        android:id="@+id/lnrAccountItem"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/txtUserDetails"
+        android:layout_marginHorizontal="@dimen/_24sdp"
+        android:layout_marginTop="@dimen/_12sdp"
         android:background="@drawable/bg_order_details"
         android:orientation="vertical"
         android:padding="@dimen/_12sdp">
@@ -45,45 +59,20 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:fontFamily="@font/inter_regular"
-                    android:text="Build Version:"
+                    android:text="User Display Name:"
                     android:textColor="@color/secondary_text_color" />
 
 
                 <TextView
-                    android:id="@+id/buildVersion"
+                    android:id="@+id/userDisplayName"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/_2sdp"
                     android:fontFamily="@font/inter_regular"
                     android:textColor="@color/secondary_dark_text_color"
-                    tools:text="1.0.0" />
+                    tools:text="dev" />
             </LinearLayout>
 
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:fontFamily="@font/inter_regular"
-                    android:gravity="end"
-                    android:text="Build Type:"
-                    android:textColor="@color/secondary_text_color" />
-
-                <TextView
-                    android:id="@+id/buildType"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/_2sdp"
-                    android:fontFamily="@font/inter_regular"
-                    android:gravity="end"
-                    tools:text="Debug"
-                    android:textColor="@color/secondary_dark_text_color" />
-
-            </LinearLayout>
 
         </LinearLayout>
 
@@ -111,17 +100,17 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:fontFamily="@font/inter_regular"
-                    android:text="Build Time:"
+                    android:text="UserName :"
                     android:textColor="@color/secondary_text_color" />
 
 
                 <TextView
-                    android:id="@+id/buildTime"
+                    android:id="@+id/userName"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/_2sdp"
                     android:fontFamily="@font/inter_regular"
-                    android:text="Wed Nov 27 13:26:06 GMT +05:30 2024"
+                    android:text="owner"
                     android:textColor="@color/secondary_dark_text_color" />
 
             </LinearLayout>
@@ -153,58 +142,17 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:fontFamily="@font/inter_regular"
-                    android:text="Remote Api:"
+                    android:text="Role:"
                     android:textColor="@color/secondary_text_color" />
 
 
                 <TextView
-                    android:id="@+id/remoteApi"
+                    android:id="@+id/role"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/_2sdp"
                     android:fontFamily="@font/inter_regular"
-                    android:text="www.google.com"
-                    android:textColor="@color/secondary_dark_text_color" />
-
-            </LinearLayout>
-
-        </LinearLayout>
-
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:layout_marginVertical="@dimen/_8sdp"
-            android:background="@color/bg_stroke_color" />
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_gravity="center"
-            android:gravity="center"
-            android:orientation="horizontal">
-
-            <LinearLayout
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:orientation="vertical">
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:fontFamily="@font/inter_regular"
-                    android:text="Hardware id:"
-                    android:textColor="@color/secondary_text_color" />
-
-
-                <TextView
-                    android:id="@+id/hardwareId"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/_2sdp"
-                    android:fontFamily="@font/inter_regular"
-                    tools:text="Anthony Blinken"
+                    android:text="User"
                     android:textColor="@color/secondary_dark_text_color" />
 
             </LinearLayout>
@@ -213,11 +161,115 @@
 
     </LinearLayout>
 
+    <TextView
+        android:id="@+id/txtAccountDetails"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/lnrAccountItem"
+        android:layout_gravity="center"
+        android:layout_marginHorizontal="@dimen/_24sdp"
+        android:layout_marginTop="@dimen/_24sdp"
+        android:fontFamily="@font/inter_bold"
+        android:text="Account Details"
+        android:textAppearance="@style/inter_700_12_10"
+        android:textColor="@color/black" />
+
+    <LinearLayout
+        android:id="@+id/lnrItem"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/txtAccountDetails"
+        android:layout_marginHorizontal="@dimen/_24sdp"
+        android:layout_marginTop="@dimen/_12sdp"
+        android:background="@drawable/bg_order_details"
+        android:orientation="vertical"
+        android:padding="@dimen/_12sdp">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:orientation="horizontal">
+
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:orientation="vertical">
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:fontFamily="@font/inter_regular"
+                    android:text="Account Name:"
+                    android:textColor="@color/secondary_text_color" />
+
+
+                <TextView
+                    android:id="@+id/accountName"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/_2sdp"
+                    android:fontFamily="@font/inter_regular"
+                    android:textColor="@color/secondary_dark_text_color"
+                    tools:text="plaidware solutions" />
+            </LinearLayout>
+
+
+        </LinearLayout>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_marginVertical="@dimen/_8sdp"
+            android:background="@color/bg_stroke_color" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:orientation="horizontal">
+
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:orientation="vertical">
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:fontFamily="@font/inter_regular"
+                    android:text="Total User in Account :"
+                    android:textColor="@color/secondary_text_color" />
+
+
+                <TextView
+                    android:id="@+id/userAccountNumber"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/_2sdp"
+                    android:fontFamily="@font/inter_regular"
+                    android:text="1"
+                    android:textColor="@color/secondary_dark_text_color" />
+
+            </LinearLayout>
+
+
+        </LinearLayout>
+
+    </LinearLayout>
+
+
     <androidx.cardview.widget.CardView
-        android:layout_marginHorizontal="@dimen/_12sdp"
+        android:layout_marginHorizontal="@dimen/_24sdp"
         android:layout_marginTop="@dimen/_12sdp"
         android:layout_below="@+id/lnrItem"
-        android:id="@+id/contactSupport"
+        android:id="@+id/logout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:cardCornerRadius="10dp"
@@ -233,14 +285,13 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Contact support"
+                android:text="Logout"
                 android:gravity="center"
-                android:textColor="@color/black"
+                android:textColor="@color/red"
                 android:textAppearance="@style/inter_400_12_14"/>
 
         </LinearLayout>
     </androidx.cardview.widget.CardView>
-
 
 
 </RelativeLayout>
