--- a/app/src/main/res/layout/activity_order_detail.xml
+++ b/app/src/main/res/layout/activity_order_detail.xml
@@ -77,6 +77,7 @@
                         android:textColor="@color/secondary_text_color" />
 
                     <TextView
+                        android:id="@+id/orderDate"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="@dimen/_2sdp"
