--- a/app/src/main/res/layout/activity_order_detail.xml
+++ b/app/src/main/res/layout/activity_order_detail.xml
@@ -83,7 +83,7 @@
                         android:layout_marginTop="@dimen/_2sdp"
                         android:fontFamily="@font/inter_regular"
                         android:gravity="end"
-                        android:text="12/12/2024"
+                        tools:text="12/12/2024"
                         android:textColor="@color/secondary_dark_text_color" />
 
                 </LinearLayout>
@@ -124,7 +124,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginTop="@dimen/_2sdp"
                         android:fontFamily="@font/inter_regular"
-                        android:text="Tony Blair-Texas Grains"
+                        tools:text="Tony Blair-Texas Grains"
                         android:textColor="@color/secondary_dark_text_color" />
 
                 </LinearLayout>
@@ -166,7 +166,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginTop="@dimen/_2sdp"
                         android:fontFamily="@font/inter_regular"
-                        android:text="Cleantec Logistics"
+                        tools:text="Cleantec Logistics"
                         android:textColor="@color/secondary_dark_text_color" />
 
                 </LinearLayout>
