--- a/app/src/main/res/layout/activity_order_search.xml
+++ b/app/src/main/res/layout/activity_order_search.xml
@@ -32,12 +32,12 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent">
 
         <LinearLayout
             android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="match_parent">
 
             <EditText
                 android:singleLine="true"
