--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,25 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
-    android:fillViewport="true"
     android:background="@color/app_color">
-
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
         <LinearLayout
+            android:gravity="center"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:paddingVertical="@dimen/_16sdp"
-            android:gravity="center">
+            android:orientation="vertical">
 
             <!-- App Logo -->
             <ImageView
+                android:layout_gravity="center"
                 android:src="@drawable/ic_logo"
                 android:id="@+id/logoImageView"
                 android:layout_width="@dimen/_120sdp"
@@ -95,7 +94,9 @@
             android:layout_height="@dimen/_50sdp"
             android:layout_centerInParent="true"
             android:indeterminateTint="@color/white" />
+
     </RelativeLayout>
 
 
-</ScrollView>
+</RelativeLayout>
+
